--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,10 +20,10 @@
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h1 class="panel-title" th:text="'Orders List'">Orders</h1>
+                    <h1 class="panel-title" th:text="'Lista Zleceń'">Orders</h1>
                 </div>
                 <div class="panel-body">
-<!--                    <a href="#" th:href="@{'/recipe/new'}">Nowe zlecenie</a>-->
+                    <a href="#" th:href="@{'/new'}">Nowe zlecenie</a>
                     <div class="table-responsive" th:if="${not #lists.isEmpty(orders)}">
                         <table class="table table-hover ">
                             <thead>.
