--- a/src/main/resources/templates/newOrder.html
+++ b/src/main/resources/templates/newOrder.html
@@ -18,6 +18,7 @@
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-2 col-md-offset-5">
+            <a href="#" th:href="@{'/home'}">Strona Główna</a>
             <form  th:object="${order}" th:action="@{/new/}"  method="post">
                 <input type="hidden" th:field="*{orderNumber}"/>
                 <div class="pannel-group">
