add fabricate quantity

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,7 +28,7 @@
                     <a href="#" th:href="@{'/new'}">Nowe zlecenie</a>
                         </div>
                         <div class="col-md-3">
-                            <a href="#" th:href="@{'/new'}">Dodaj ilość wykonaną</a>
+                            <a href="#" th:href="@{'/addQuantity'}">Dodaj ilość wykonaną</a>
                         </div>
                     </div>
                     <div class="table-responsive" th:if="${not #lists.isEmpty(orders)}">
