--- a/src/main/resources/templates/made.html
+++ b/src/main/resources/templates/made.html
@@ -18,7 +18,14 @@
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-2 col-md-offset-5">
+            <div class="row">
+                <div class="col-md-8">
             <a href="#" th:href="@{'/home'}">Strona Główna</a>
+                </div>
+                <div class="col-md-1">
+                    <a th:href="@{'/logout'}" th:text="'Wyloguj'">Wyloguj</a>
+                </div>
+            </div>
             <form th:object="${task}" th:action="@{/addQuantity/}"  method="post">
                 <div class="pannel-group">
                     <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
